<resources>
    <string name="app_name">relationship</string>

    <string name="relation_list">关注列表</string>
    <string name="relation_following_empty">你还没有关注任何人喔～</string>
    <string name="relation_follower_empty">还没有人关注你喔～</string>
    <string name="relation_tab_follower">关注我的（%d）</string>
    <string name="relation_tab_following">我关注的（%d）</string>

    <string name="relation_black_list">黑名单</string>
    <string name="relation_black_list_empty">黑名单空空如也~</string>
    <string name="relation_black_dialog_message">取消对TA的屏蔽</string>

    <string name="relation_feedback_desc">如果文字描述不清楚，您也可以邮件发送问题至\n service@dokiwa.com或者加入QQ群870278209反馈</string>
    <string name="relation_feedback_submit">提交</string>
    <string name="relation_feedback_title">问题反馈</string>

    <string name="relation_ban_report">举报用户</string>
    <string name="relation_ban_report_reason">举报原因</string>
    <string name="relation_ban_report_reason_tip">( 恶意举报将导致封号 )</string>
    <string name="relation_ban_report_reason_addon">补充说明</string>
    <string name="relation_ban_report_reason_addon_tip">( 可不填 )</string>
    <string name="relation_ban_report_no_reason">请选择举报原因</string>
    <string name="relation_ban_report_success">举报成功</string>
    <string name="relation_ban_report_failed">请求失败，请稍候再试</string>

    <string name="relation_status_follow_both">互相关注</string>
    <string name="relation_status_follow_it">关注TA</string>
    <string name="relation_status_followed">已关注</string>

</resources>
